MAJ du jeu Game Of Memory 2K17 Sound + Reduction du jeu